--- a/index.html
+++ b/index.html
@@ -39,12 +39,16 @@
         <div class="row">
           <div class="col-md-12">
             <div class="panel panel-default">
-              <div class="panel-body">A Basic Panel</div>
+              <div id="map" class="panel-body">A Basic Panel</div>
             </div> 
           </div>
         </div>
       </div>
+
 	     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	     <script type="text/javascript" src="assets/javascript/script.js"></script>
+       <script type="text/javascript" src="assets/javascript/script.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
+       <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+       <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbdYz0sVFHyKAMVP051D_UI1PsbxQ92n8&callback=initMap"></script>
     </body>
   </html>
