--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
       </div>
-      
+      <input id="pac-input" class="controls" type="text" placeholder="Search Box">
       <div id="map"></div>
       
 
