styling or whatever

--- a/index.html
+++ b/index.html
@@ -37,8 +37,27 @@
         </div>
       </div>
       <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-      <div id="map"></div>
-      
+      <div id="mapContainer">
+        <div id="map"></div>
+      </div>
+
+
+      <!-- Login Modal -->
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+            <h2>Modal Header</h2>
+        </div>
+        <div class="modal-body">
+          <p>Some Text in the Modal Body</p>
+          <p>Some other text</p>
+        </div>
+        <div class"modal-footer">
+          <h3>Modal Footer</h3>
+        </div>
+      </div>
+
+
 
        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
        <script type="text/javascript" src="assets/javascript/firebasemap.js"></script>
