--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                   <li class="nav-item">
                     <a id="loginBtn" class="nav-link" active" href="#"><i class="glyphicon glyphicon-tint"></i></a>
                   </li>
+                  <li class="nav-item">
+                    <a id="btnPrintUser" class="nav-link" active" href="#"><i class="glyphicon glyphicon-print"></i></a>
+                  </li>
+                  <li class="nav-item" id="loggedInAs"> 
+                  </li> 
+                  <li class="nav-item">
+                    <a id="btnLogout" class="nav-link" active" href="#"><i class="glyphicon glyphicon-log-out"></i></a>
+                  </li>                  
                   <form id="search-form" class="form-inline my-2 my-lg-0">
                   <input id="searchval" class="form-control mr-sm-2" type="text" placeholder="Search">
                   <button id="search" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
@@ -47,6 +55,7 @@
           </div>
               <input class="input" id="txtEmail" type="email" placeholder="Email">
               <input class="input" id="txtPassword" type="password" placeholder="Password">
+              <input class="input" id="txtDispName" type="name" placeholder="Display Name">
               <div class="buttons">
                 <button id="btnLogin" class="btn btn-secondary">Log In</button>
                 <button id="btnSignUp" class="btn btn-secondary">Sign Up</button>
@@ -75,6 +84,7 @@
 
        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
        <script type="text/javascript" src="assets/javascript/firebasemap.js"></script>
+       <script type="text/javascript" src="assets/javascript/auth.js"></script>
        <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
         <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK4sY4dvK65ceACdFRZ4J5wt34qSItY6E
