Brian version 2 with authentication

--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
                     <a id="btnPrintUser" class="nav-link" active" href="#"><i class="glyphicon glyphicon-print"></i></a>
                   </li>
                   <li class="nav-item" id="loggedInAs"> 
-                  </li> 
-                  <li class="nav-item">
+                  </li>
+                  <button id="nbBtnLogin" type="button" class="nav-item btn btn-outline-success my-2 my-sm-0" type="submit">
+                    <span class="glyphicon glyphicon-log-in" my-2 my-sm-0></span> Login / Sign-up
+                  </button>                   
+                  <button id="nbBtnLogout" type="button" class="btn btn-outline-success my-2 my-sm-0 hide">
+                    <span class="glyphicon glyphicon-log-out" my-2 my-sm-0></span> Logout
+                  </button> 
+<!--                   <li class="nav-item">
                     <a id="btnLogout" class="nav-link" active" href="#"><i class="glyphicon glyphicon-log-out"></i></a>
-                  </li>                  
+                  </li>   -->                
                   <form id="search-form" class="form-inline my-2 my-lg-0">
                   <input id="searchval" class="form-control mr-sm-2" type="text" placeholder="Search">
                   <button id="search" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
