--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                   <li class="nav-item">
                     <a id="loginBtn" class="nav-link" active" href="#"><i class="glyphicon glyphicon-tint"></i></a>
                   </li>
-                  <li class="nav-item">
+   <!--                <li class="nav-item">
                     <a id="btnPrintUser" class="nav-link" active" href="#"><i class="glyphicon glyphicon-print"></i></a>
-                  </li>
+                  </li> -->
                   <li class="nav-item" id="loggedInAs"> 
                   </li>
                   <button id="nbBtnLogin" type="button" class="nav-item btn btn-outline-success my-2 my-sm-0" type="submit">
@@ -84,7 +84,7 @@
               <div class="buttons">
 <!--                 <button id="btnLogin" class="btn btn-secondary">Log In</button> -->
                 <button id="btnSignUp" class="btn btn-secondary">Sign Up</button>
-                <button id="btnLogout" class="btn btn-action hide">Log Out</button>
+<!--                 <button id="btnLogout" class="btn btn-action hide">Log Out</button> -->
                 </div>
           </div>
       </div>      
@@ -105,8 +105,6 @@
         </div>
       </div> -->
 
-
-
        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
        <script type="text/javascript" src="assets/javascript/firebasemap.js"></script>
        <script type="text/javascript" src="assets/javascript/auth.js"></script>
@@ -115,5 +113,6 @@
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK4sY4dvK65ceACdFRZ4J5wt34qSItY6E
             &libraries=visualization&callback=initMap">
         </script>
+
     </body>
   </html>
