--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Orbitron:700" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Kanit|Permanent+Marker" rel="stylesheet">
   </head>
     <body>
@@ -87,24 +88,17 @@
                 <button id="btnLogout" class="btn btn-action hide">Log Out</button>
                 </div>
           </div>
-      </div>      
-
-      
-      <!-- Login Modal -->
-     <!--  <div class="modal-content">
-        <div class="modal-header">
-          <span class="close">&times;</span>
-            <h2>Modal Header</h2>
-        </div>
-        <div class="modal-body">
-          <p>Some Text in the Modal Body</p>
-          <p>Some other text</p>
-        </div>
-        <div class"modal-footer">
-          <h3>Modal Footer</h3>
-        </div>
-      </div> -->
-
+      </div>  
+      <div id="displayModal" class="modal">
+        <div class="modal-content">
+          <div class="modal-header">
+            <span class="close">&times;</span>
+          </div>
+              <div class="modal-body">
+                
+              </div>
+          </div>
+      </div>    
 
 
        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
