re-fixes the modals and buttons

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                   </button>    <!-- Logout  Button -->
 <!--                   <li class="nav-item">
                     <a id="btnLogout" class="nav-link" active" href="#"><i class="glyphicon glyphicon-log-out"></i></a>
-                  </li>   -->                
+                  </li>   --> 
+                  <div id="loggedInAs"></div>               
                   <form id="search-form" class="form-inline my-2 my-lg-0">
                   <input id="searchval" class="form-control mr-sm-2" type="text" placeholder="Search">
                   <button id="search" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
